still trying to fix hamburger menu btn. does not work on mobile 2

--- a/css/style.css
+++ b/css/style.css
@@ -282,11 +282,10 @@ header {
   width: auto;
   margin: 0;
 }
-}
 
 /* ----- Burger menu styling ----- */
 
-/* .logo-container {
+.logo-container {
   display: flex;
   justify-content: left;
   align-items: left;
@@ -384,7 +383,7 @@ nav {
   padding-top: 60px;
   width: 100%;
 }
-} */
+}
 
 /* ------end of nav bar ------- */
 
